# MLPOps

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt
.devcontainer/: dev.dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: codecheck.yaml  docker.yaml  dvc_wokflow.yaml  tests.yaml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlsopsbasic/: __init__.py  config.py  config.yaml  convert_to_onx.py  model.py  predict_model.py  predict_model_onnx.py  train2.py  train_model.py
mlsopsbasic/config/: config.yaml
mlsopsbasic/config/vertex_ai/: config.yaml  vertex_ai.yaml
mlsopsbasic/data/: data_statistics.py  footballDataset.py  make_dataset.py
mlsopsbasic/experiments/: exp1.yaml
mlsopsbasic/models/: unet.py
mlsopsbasic/visualizations/: visualize.py
models/: model.pth
notebooks/: OWLViT_SAT.py
outputs/2025-01-08/23-39-04/.hydra/: config.yaml
reports/: README.md
tests/: __init__.py  test_data.py  test_model.py
tests/integrationtests/: test_predict_model_api.py
tests/performancetests/: locustfile.py
